--- a/formularioApostas.html
+++ b/formularioApostas.html
@@ -262,8 +262,8 @@
       background-color: #252525;
       border-radius: 12px;
       padding: 20px;
-      margin-bottom: 2rem; /* Adiciona espaço abaixo do gráfico */
-      padding-bottom: 1rem;
+      margin-bottom: 3rem; /* Aumentado o espaço abaixo do gráfico */
+      padding-bottom: 2rem;
       min-height: 300px; /* Garante altura mínima para o gráfico */
       height: 300px;
     }
@@ -277,11 +277,13 @@
 
     /* Lista de apostas */
     .history-title {
-      margin-top: 3rem; /* Aumenta o espaço acima do título do histórico */
+      margin-top: 5rem; /* Aumentado significativamente o espaço acima do título */
       margin-bottom: 1.5rem;
       font-size: 1.5rem;
       font-weight: 600;
       color: var(--text-primary);
+      padding-top: 2rem; /* Adicionado padding extra no topo */
+      border-top: 1px solid rgba(255, 255, 255, 0.1); /* Opcional: adiciona uma linha divisória */
     }
 
     .history-list {
