--- a/formularioApostas.html
+++ b/formularioApostas.html
@@ -4,614 +4,293 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gerenciamento</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <title>Gerenciamento de Apostas</title>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <style>
-    /* Reset e estilos base */
+    @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap');
+
+    :root {
+      --neon-green: #00ff88;
+      --neon-blue: #00f2ff;
+      --neon-purple: #b537f2;
+      --bg-dark: #0a0a0f;
+      --bg-darker: #070709;
+      --card-bg: rgba(16, 16, 20, 0.7);
+      --text-primary: #ffffff;
+      --text-secondary: rgba(255, 255, 255, 0.7);
+      --border-glow: 0 0 10px rgba(0, 255, 136, 0.3);
+      --neon-box-shadow: 0 0 20px rgba(0, 255, 136, 0.2);
+    }
+
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      font-family: 'Inter', 'Roboto', -apple-system, BlinkMacSystemFont, sans-serif;
+      font-family: 'Outfit', sans-serif;
     }
 
     body {
-      background-color: #121212;
-      color: #e0e0e0;
+      background: linear-gradient(135deg, var(--bg-darker) 0%, var(--bg-dark) 100%);
+      color: var(--text-primary);
       min-height: 100vh;
+      position: relative;
+      overflow-x: hidden;
     }
 
-    /* Container principal */
+    /* Efeito de fundo animado */
+    body::before {
+      content: '';
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: 
+        radial-gradient(circle at 20% 20%, rgba(0, 255, 136, 0.05) 0%, transparent 40%),
+        radial-gradient(circle at 80% 80%, rgba(181, 55, 242, 0.05) 0%, transparent 40%);
+      pointer-events: none;
+      z-index: -1;
+    }
+
     .container {
-      max-width: 100%;
-      padding: 0;
-      margin: 0;
-      background-color: #121212;
-    }
-
-    .app-container {
-      max-width: 800px;
+      max-width: 1200px;
       margin: 0 auto;
-      padding: 16px;
+      padding: 2rem;
     }
 
-    /* Cabeçalho */
+    /* Cabeçalho estilizado */
     .header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 16px 0;
-      margin-bottom: 24px;
-      border-bottom: 1px solid #333;
+      text-align: center;
+      margin-bottom: 3rem;
+      position: relative;
     }
 
-    .app-title {
-      font-size: 24px;
+    .header h1 {
+      font-family: 'Space Grotesk', sans-serif;
+      font-size: 2.5rem;
       font-weight: 700;
-      color: #bb86fc;
+      color: var(--text-primary);
+      text-transform: uppercase;
+      letter-spacing: 2px;
+      margin-bottom: 1rem;
+      background: linear-gradient(to right, var(--neon-green), var(--neon-blue));
+      -webkit-background-clip: text;
+      background-clip: text;
+      -webkit-text-fill-color: transparent;
+      animation: textGlow 1.5s ease-in-out infinite alternate;
     }
 
-    .user-info {
-      display: flex;
-      align-items: center;
-      gap: 10px;
+    /* Cards com efeito glassmorphism */
+    .card {
+      background: var(--card-bg);
+      backdrop-filter: blur(10px);
+      border-radius: 20px;
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      padding: 2rem;
+      margin-bottom: 2rem;
+      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
+      position: relative;
+      overflow: hidden;
     }
 
-    .user-avatar {
-      width: 32px;
-      height: 32px;
-      border-radius: 50%;
-      background-color: #bb86fc;
-      color: #000;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-weight: bold;
+    .card::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      height: 2px;
+      background: linear-gradient(90deg, 
+        transparent 0%, 
+        var(--neon-green) 50%, 
+        transparent 100%);
+      animation: borderGlow 2s ease-in-out infinite;
     }
 
-    /* Navegação por abas */
-    .tabs {
-      display: flex;
-      gap: 8px;
-      margin-bottom: 24px;
-      background-color: #1e1e1e;
-      border-radius: 12px;
-      padding: 4px;
-      overflow-x: auto;
-    }
-
-    .tab-button {
-      padding: 10px 16px;
-      border: none;
-      background: none;
-      color: #888;
-      border-radius: 8px;
-      cursor: pointer;
-      display: flex;
-      align-items: center;
-      gap: 8px;
-      flex: 1;
-      justify-content: center;
-      transition: all 0.2s ease;
-      font-weight: 500;
-      min-width: 120px;
-    }
-
-    .tab-button.active {
-      background-color: #2c2c2c;
-      color: #bb86fc;
-    }
-
-    .tab-button:hover:not(.active) {
-      background-color: #252525;
-      color: #a0a0a0;
-    }
-
-    .icon {
-      width: 18px;
-      height: 18px;
-    }
-
-    .icon-sm {
-      width: 16px;
-      height: 16px;
-    }
-
-    /* Conteúdo das abas */
-    .tab-content {
-      display: none;
-      background-color: #1e1e1e;
-      border-radius: 12px;
-      padding: 24px;
-      margin-bottom: 24px;
-      box-shadow: 0 4px 16px rgba(0, 0, 0, 0.3);
-    }
-
-    .tab-content.active {
-      display: block;
-    }
-
-    /* Formulário */
+    /* Inputs estilizados */
     .form-group {
-      margin-bottom: 16px;
+      margin-bottom: 1.5rem;
     }
 
     label {
       display: block;
-      margin-bottom: 8px;
+      margin-bottom: 0.5rem;
+      color: var(--text-secondary);
+      font-size: 0.9rem;
       font-weight: 500;
-      color: #b0b0b0;
-    }
-
-    input,
-    select {
-      width: 100%;
-      padding: 12px 16px;
-      border: 1px solid #333;
-      border-radius: 8px;
-      background-color: #252525;
-      color: #e0e0e0;
-      font-size: 14px;
-      transition: border-color 0.2s;
-    }
-
-    input:focus,
-    select:focus {
-      border-color: #bb86fc;
-      outline: none;
-    }
-
-    input::placeholder {
-      color: #666;
-    }
-
-    .calculated-result {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin: 24px 0;
-      padding: 16px;
-      background-color: #252525;
-      border-radius: 8px;
-      border-left: 4px solid #bb86fc;
-    }
-
-    .calculated-result p {
-      font-weight: 500;
-    }
-
-    .calculated-result .value {
-      font-weight: 700;
-      font-size: 18px;
-      color: #bb86fc;
-    }
-
-    .submit-button {
-      width: 100%;
-      padding: 14px;
-      border: none;
-      border-radius: 8px;
-      background-color: #bb86fc;
-      color: #000;
-      font-weight: 600;
-      cursor: pointer;
-      transition: background-color 0.2s;
       text-transform: uppercase;
-      letter-spacing: 0.5px;
+      letter-spacing: 1px;
     }
 
-    .submit-button:hover {
-      background-color: #a370e0;
-    }
-
-    /* Resumo */
-    .summary {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 16px;
-      margin-bottom: 24px;
-    }
-
-    .summary-item {
-      padding: 16px;
-      border-radius: 8px;
-      text-align: center;
-      display: flex;
-      flex-direction: column;
-      gap: 8px;
-    }
-
-    .summary-item.gain {
-      background-color: rgba(39, 174, 96, 0.15);
-      border: 1px solid rgba(39, 174, 96, 0.3);
-    }
-
-    .summary-item.loss {
-      background-color: rgba(231, 76, 60, 0.15);
-      border: 1px solid rgba(231, 76, 60, 0.3);
-    }
-
-    .summary-item.balance {
-      background-color: rgba(187, 134, 252, 0.15);
-      border: 1px solid rgba(187, 134, 252, 0.3);
-    }
-
-    .summary-item .label {
-      font-size: 14px;
-      color: #b0b0b0;
-    }
-
-    .summary-item .value {
-      font-size: 18px;
-      font-weight: 700;
-    }
-
-    .gain .value {
-      color: #27ae60;
-    }
-
-    .loss .value {
-      color: #e74c3c;
-    }
-
-    .balance .value {
-      color: #bb86fc;
-    }
-
-    /* Gráfico */
-    .chart-container {
-      background-color: #252525;
+    input, select {
+      width: 100%;
+      padding: 1rem;
+      background: rgba(255, 255, 255, 0.05);
+      border: 1px solid rgba(255, 255, 255, 0.1);
       border-radius: 12px;
-      padding: 20px;
-      margin-bottom: 3rem;
-      min-height: 400px; /* Aumentado a altura mínima */
-      height: 400px; /* Altura fixa maior */
-    }
-
-    .chart-title {
-      margin-bottom: 16px;
-      color: #b0b0b0;
-      font-size: 16px;
-      font-weight: 500;
-    }
-
-    /* Estilo para o seletor de período */
-    .chart-header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin-bottom: 20px;
-    }
-
-    .period-selector {
-      display: flex;
-      gap: 10px;
-      background: rgba(0, 0, 0, 0.2);
-      padding: 8px;
-      border-radius: 8px;
-    }
-
-    .period-button {
-      padding: 6px 12px;
-      border: none;
-      border-radius: 6px;
-      background: transparent;
-      color: #b0b0b0;
-      cursor: pointer;
+      color: var(--text-primary);
+      font-size: 1rem;
       transition: all 0.3s ease;
     }
 
-    .period-button.active {
-      background: #bb86fc;
-      color: #1e1e1e;
+    input:focus, select:focus {
+      outline: none;
+      border-color: var(--neon-green);
+      box-shadow: var(--border-glow);
     }
 
-    /* Estilo para o seletor de datas personalizado */
-    .date-range-selector {
-      display: flex;
-      gap: 10px;
-      align-items: center;
-      margin-left: 20px;
-    }
-
-    .date-input {
-      background: rgba(0, 0, 0, 0.2);
-      border: 1px solid #bb86fc;
-      border-radius: 6px;
-      color: #e0e0e0;
-      padding: 6px 12px;
-    }
-
-    /* Lista de apostas */
-    .history-title {
-      margin-top: 5rem; /* Aumentado significativamente o espaço acima do título */
-      margin-bottom: 1.5rem;
-      font-size: 1.5rem;
+    /* Botões com efeito neon */
+    .btn {
+      background: linear-gradient(45deg, var(--neon-green), var(--neon-blue));
+      border: none;
+      border-radius: 12px;
+      padding: 1rem 2rem;
+      color: var(--bg-dark);
       font-weight: 600;
-      color: var(--text-primary);
-      padding-top: 2rem; /* Adicionado padding extra no topo */
-      border-top: 1px solid rgba(255, 255, 255, 0.1); /* Opcional: adiciona uma linha divisória */
-    }
-
-    .history-list {
-      display: flex;
-      flex-direction: column;
-      gap: 12px;
-      margin-top: 1rem; /* Espaço adicional acima da lista */
-      max-height: 500px; /* Altura máxima para a lista com scroll */
-      overflow-y: auto;
-      padding-right: 0.5rem;
-    }
-
-    .aposta-item {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 16px;
-      background-color: #252525;
-      border-radius: 8px;
-      border-left: 4px solid #333;
-    }
-
-    .aposta-info {
-      flex: 1;
-    }
-
-    .aposta-actions button {
-      background-color: #333;
-      color: #e0e0e0;
-      border: none;
-      padding: 8px 12px;
-      border-radius: 6px;
+      font-size: 1rem;
       cursor: pointer;
-      transition: background-color 0.2s;
+      transition: all 0.3s ease;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+      position: relative;
+      overflow: hidden;
     }
 
-    .aposta-actions button:hover {
-      background-color: #444;
-    }
-
-    .status-green {
-      color: #27ae60;
-    }
-
-    .status-red {
-      color: #e74c3c;
-    }
-
-    /* Mercados */
-    .market-form {
-      display: flex;
-      gap: 8px;
-      margin-bottom: 16px;
-    }
-
-    .market-input {
-      flex: 1;
-    }
-
-    .add-market-button {
-      display: flex;
-      align-items: center;
-      gap: 8px;
-      padding: 12px 16px;
-      background-color: #bb86fc;
-      color: #000;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      font-weight: 600;
-      transition: background-color 0.2s;
-    }
-
-    .add-market-button:hover {
-      background-color: #a370e0;
-    }
-
-    .markets-list {
-      display: flex;
-      flex-direction: column;
-      gap: 8px;
-    }
-
-    .market-item {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 12px 16px;
-      background-color: #252525;
-      border-radius: 8px;
-    }
-
-    .remove-button {
-      background: none;
-      border: none;
-      color: #e74c3c;
-      cursor: pointer;
-      padding: 4px;
-      border-radius: 4px;
-      transition: background-color 0.2s;
-    }
-
-    .remove-button:hover {
-      background-color: rgba(231, 76, 60, 0.1);
-    }
-
-    /* Botão Voltar */
-    .back-button {
-      position: fixed;
-      top: 16px;
-      left: 16px;
-      width: 40px;
-      height: 40px;
-      border-radius: 50%;
-      background-color: #252525;
-      border: none;
-      cursor: pointer;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
-      z-index: 10;
-    }
-
-    .back-button::before {
-      content: "";
-      display: block;
-      width: 12px;
-      height: 12px;
-      border-left: 2px solid #bb86fc;
-      border-bottom: 2px solid #bb86fc;
+    .btn::before {
+      content: '';
+      position: absolute;
+      top: -50%;
+      left: -50%;
+      width: 200%;
+      height: 200%;
+      background: linear-gradient(
+        transparent,
+        rgba(255, 255, 255, 0.2),
+        transparent
+      );
       transform: rotate(45deg);
-      margin-right: -4px;
+      transition: all 0.5s ease;
     }
 
-    .back-button:hover {
-      background-color: #333;
+    .btn:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 0 20px rgba(0, 255, 136, 0.4);
     }
 
-    /* Loading */
-    .loading {
-      text-align: center;
-      padding: 20px;
-      color: #888;
+    .btn:hover::before {
+      transform: rotate(45deg) translate(100%, 100%);
     }
 
-    /* Animação de pulse para indicar carregamento */
-    @keyframes pulse {
-      0% {
-        opacity: 0.6;
+    /* Gráfico estilizado */
+    .chart-container {
+      background: var(--card-bg);
+      border-radius: 20px;
+      padding: 2rem;
+      margin: 2rem 0;
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      box-shadow: var(--neon-box-shadow);
+      height: 400px;
+    }
+
+    /* Animações */
+    @keyframes borderGlow {
+      0%, 100% { opacity: 0.5; }
+      50% { opacity: 1; }
+    }
+
+    @keyframes textGlow {
+      from {
+        text-shadow: 0 0 10px rgba(0, 255, 136, 0.5),
+                     0 0 20px rgba(0, 255, 136, 0.3),
+                     0 0 30px rgba(0, 255, 136, 0.2);
       }
-
-      50% {
-        opacity: 1;
-      }
-
-      100% {
-        opacity: 0.6;
+      to {
+        text-shadow: 0 0 20px rgba(0, 255, 136, 0.7),
+                     0 0 30px rgba(0, 255, 136, 0.5),
+                     0 0 40px rgba(0, 255, 136, 0.3);
       }
     }
 
-    .loading {
-      animation: pulse 1.5s infinite;
+    /* Controles de período */
+    .period-controls {
+      display: flex;
+      gap: 1rem;
+      flex-wrap: wrap;
+      margin-bottom: 2rem;
+    }
+
+    .period-button {
+      background: rgba(255, 255, 255, 0.05);
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      color: var(--text-primary);
+      padding: 0.75rem 1.5rem;
+      border-radius: 12px;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      font-weight: 500;
+    }
+
+    .period-button:hover {
+      background: rgba(0, 255, 136, 0.1);
+      border-color: var(--neon-green);
+      box-shadow: var(--border-glow);
+    }
+
+    .period-button.active {
+      background: var(--neon-green);
+      color: var(--bg-dark);
+      border-color: var(--neon-green);
+      font-weight: 600;
+    }
+
+    /* Data range inputs */
+    .date-range {
+      display: flex;
+      gap: 1rem;
+      align-items: center;
+      flex-wrap: wrap;
+      margin-bottom: 1rem;
+    }
+
+    input[type="date"] {
+      background: rgba(255, 255, 255, 0.05);
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      border-radius: 12px;
+      padding: 0.75rem 1rem;
+      color: var(--text-primary);
+      cursor: pointer;
+    }
+
+    input[type="date"]:hover,
+    input[type="date"]:focus {
+      border-color: var(--neon-green);
+      box-shadow: var(--border-glow);
     }
 
     /* Responsividade */
     @media (max-width: 768px) {
-      .app-container {
-        padding: 16px 12px;
+      .container {
+        padding: 1rem;
       }
 
-      .summary {
-        grid-template-columns: 1fr;
+      .header h1 {
+        font-size: 2rem;
       }
 
-      .tab-button {
-        padding: 8px 12px;
-        font-size: 14px;
+      .card {
+        padding: 1.5rem;
       }
 
-      .tab-content {
-        padding: 16px;
+      .period-controls {
+        justify-content: center;
       }
 
-      .aposta-item {
+      .date-range {
         flex-direction: column;
-        gap: 12px;
-        align-items: flex-start;
+        align-items: stretch;
       }
-
-      .aposta-actions {
-        width: 100%;
-        display: flex;
-        justify-content: flex-end;
-      }
-    }
-
-    /* Estilos para notificações */
-    .notification {
-      position: fixed;
-      bottom: 24px;
-      right: 24px;
-      padding: 16px;
-      background-color: #252525;
-      border-radius: 8px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
-      display: flex;
-      align-items: center;
-      gap: 12px;
-      z-index: 1000;
-      max-width: 300px;
-      transform: translateY(20px);
-      opacity: 0;
-      transition: all 0.3s ease;
-    }
-
-    .notification.success {
-      border-left: 4px solid #27ae60;
-    }
-
-    .notification.error {
-      border-left: 4px solid #e74c3c;
-    }
-
-    .notification.show {
-      transform: translateY(0);
-      opacity: 1;
-    }
-
-    .notification-icon {
-      width: 24px;
-      height: 24px;
-    }
-
-    .notification-content {
-      flex: 1;
-    }
-
-    .notification-title {
-      font-weight: 600;
-      margin-bottom: 4px;
-    }
-
-    .notification-message {
-      font-size: 14px;
-      color: #b0b0b0;
-    }
-
-    /* Personalização do scrollbar */
-    ::-webkit-scrollbar {
-      width: 8px;
-      height: 8px;
-    }
-
-    ::-webkit-scrollbar-track {
-      background: #1e1e1e;
-      border-radius: 4px;
-    }
-
-    ::-webkit-scrollbar-thumb {
-      background: #444;
-      border-radius: 4px;
-    }
-
-    ::-webkit-scrollbar-thumb:hover {
-      background: #555;
-    }
-
-    /* Opcional: Estilizar a barra de rolagem */
-    .history-list::-webkit-scrollbar {
-      width: 8px;
-    }
-
-    .history-list::-webkit-scrollbar-track {
-      background: rgba(255, 255, 255, 0.1);
-      border-radius: 4px;
-    }
-
-    .history-list::-webkit-scrollbar-thumb {
-      background: var(--accent-color);
-      border-radius: 4px;
     }
   </style>
 </head>
