--- a/formularioApostas.html
+++ b/formularioApostas.html
@@ -324,14 +324,21 @@
     }
 
     .summary-item {
-      padding: 16px;
-      border-radius: 12px;
+      padding: 24px;
+      border-radius: 16px;
       text-align: center;
       display: flex;
       flex-direction: column;
-      gap: 8px;
-      background: rgba(255, 255, 255, 0.05);
-      border: 1px solid rgba(255, 255, 255, 0.1);
+      gap: 12px;
+      background: rgba(20, 20, 25, 0.95);
+      border: 1px solid rgba(108, 92, 231, 0.1);
+      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .summary-item:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 12px 40px rgba(108, 92, 231, 0.15);
     }
 
     .summary-item.gain {
@@ -373,20 +380,44 @@
 
     /* Gráfico */
     .chart-container {
-      background: linear-gradient(to bottom right, rgba(30, 41, 59, 0.95), rgba(15, 23, 42, 0.95));
+      background: linear-gradient(to bottom right, rgba(15, 15, 20, 0.98), rgba(10, 10, 15, 0.98));
       border-radius: 16px;
-      padding: 32px;
+      padding: 24px;
       margin: 2rem auto;
       width: 100%;
-      max-width: 1200px;
-      aspect-ratio: 16/9;
-      border: 1px solid rgba(187, 134, 252, 0.1);
-      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
+      max-width: 1000px;
+      height: 400px;
+      border: 1px solid rgba(108, 92, 231, 0.1);
+      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
       position: relative;
       overflow: hidden;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
+    }
+
+    body {
+      background: linear-gradient(135deg, #0a0a0f 0%, #13131a 100%);
+      color: #ffffff;
+    }
+
+    .summary-item {
+      backdrop-filter: blur(10px);
+      -webkit-backdrop-filter: blur(10px);
+    }
+
+    .summary-item .label {
+      font-size: 0.9rem;
+      font-weight: 500;
+      text-transform: uppercase;
+      letter-spacing: 0.5px;
+    }
+
+    .summary-item .value {
+      font-size: 1.5rem;
+      font-weight: 700;
+      letter-spacing: 0.5px;
+      background: linear-gradient(45deg, #6c5ce7, #a29bfe);
+      -webkit-background-clip: text;
+      background-clip: text;
+      color: transparent;
     }
 
     .chart-tooltip {
