--- a/formularioApostas.html
+++ b/formularioApostas.html
@@ -324,7 +324,7 @@
       text-align: center;
       display: flex;
       flex-direction: column;
-      gap: 0.875rem;
+      gap: 1.25rem;
       background: rgba(15, 23, 42, 0.5);
       border: 1px solid rgba(99, 102, 241, 0.1);
       box-shadow: var(--shadow-sm);
@@ -355,17 +355,19 @@
     }
 
     .summary-item .label {
-      font-size: 0.875rem;
+      font-size: 1rem;
       font-weight: 500;
       text-transform: uppercase;
       letter-spacing: 1px;
       color: var(--color-text-tertiary);
+      margin-bottom: 0.5rem;
     }
 
     .summary-item .value {
-      font-size: 1.75rem;
+      font-size: 2rem;
       font-weight: 700;
       letter-spacing: 0.5px;
+      line-height: 1.2;
     }
 
     .gain .value {
